# magi

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
examples/: config.toml
examples/prompts/: casper-skeptic.md  melchior-pragmatist.md
nix/: module.nix  overlay.nix  package.nix
src/magi/: __init__.py  __main__.py  cli.py  config.py  deliberation.py  personalities.py  render.py
tests/: test_config.py  test_extract_json.py  test_streaming.py
